# NoteTakingApp

./: CMakeLists.txt  main.cpp  notes.txt  output
